Move polynomial schema and its binding-stuff from 1d2d to deegree. KalypsoWSPM now read bankfull-calculation results into separate result-gml as points-observation and as polynomials. Can be displayed in feature view.